--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cfn-response-ts",
-  "version": "0.1.1",
+  "version": "0.0.2",
   "description": "AWS Custom Resource handler",
   "type": "module",
-  "types": "./lib/cjs/types/index.d.js",
+  "types": "./lib/cjs/types/index.d.ts",
   "main": "./lib/cjs/index.js",
   "files": [
     "lib/**/*"
