--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cfn-response-ts",
-  "version": "0.0.3",
+  "version": "0.0.7",
   "description": "AWS Custom Resource handler",
   "type": "module",
   "types": "./lib/cjs/types/index.d.ts",
@@ -10,10 +10,11 @@
   ],
   "scripts": {
     "clean": "rm -rf ./lib",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build": "npm run clean && npm run test && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "test": "tsc && jest"
   },
   "repository": {
     "type": "git",
@@ -42,11 +43,16 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.108",
+    "@types/jest": "^29.2.2",
     "aws-lambda": "^1.0.7",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^29.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@aws-sdk/client-identitystore": "^3.209.0",
+    "@types/node-fetch": "^2.6.2",
     "node-fetch": "^3.3.0"
   }
 }
