--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "preserveConstEnums": true,
     "noEmit": true,
     "sourceMap": false,
-    "module":"es2015",
-    "moduleResolution":"node"
+    "module": "node16",
+    "moduleResolution": "node"
   },
   "files": [
     "./src/index.ts"
